--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
   "pages": [
-    "pages/classic/classic",
     "pages/book/book",
-    "pages/my/my"
+    "pages/classic/classic",
+    "pages/my/my",
+    "pages/book/book-detail/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
