--- a/project.config.json
+++ b/project.config.json
@@ -30,13 +30,25 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": -1,
+					"name": "book-detail",
+					"pathName": "pages/book/book-detail/index",
+					"query": "bookId=1120",
+					"scene": null
+				}
+			]
 		}
 	}
 }
