--- a/project.config.json
+++ b/project.config.json
@@ -39,13 +39,20 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
 					"name": "book-detail",
 					"pathName": "pages/book/book-detail/index",
 					"query": "bookId=1002",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "book",
+					"pathName": "pages/book/book",
+					"query": "",
 					"scene": null
 				}
 			]
